unpackaged/main/default/objects/pse__Utilization__c/pse__Utilization__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Utilization</label>
</CustomObject>