unpackaged/main/default/objects/pse__Utilization__c/fields/pse__Assignment_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment_Batch_Size__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The number of assignments to process in a single batch when calculating utilization</description>
    <inlineHelpText>The number of assignments to process in a single batch when calculating utilization</inlineHelpText>
    <label>Assignment Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>