unpackaged/main/default/objects/pse__Utilization__c/fields/pse__Calculate_Cross_Products__c.field-meta.xml
<CustomField>
    <fullName>pse__Calculate_Cross_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the calculation of cross product combination of region, practice and group.
Such as Region by Practice, or Group by Region</description>
    <inlineHelpText>Allows the calculation of cross product combination of region, practice and group.
Such as Region by Practice, or Group by Region</inlineHelpText>
    <label>Calculate Cross Products</label>
    <type>Checkbox</type>
</CustomField>