unpackaged/main/default/objects/pse__Utilization__c/fields/pse__Default_Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Opportunity_Probability__c</fullName>
    <label>Default Opportunity Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>