unpackaged/main/default/objects/pse__Utilization__c/fields/pse__Deletion_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Deletion_Batch_Size__c</fullName>
    <defaultValue>10</defaultValue>
    <description>When batch deleting previous utilization calculations, sets the maximum number of utilization calculation records to process per batch.</description>
    <inlineHelpText>When batch deleting previous utilization calculations, sets the maximum number of utilization calculation records to process per batch.</inlineHelpText>
    <label>Deletion Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>