unpackaged/main/default/objects/pse__Utilization__c/fields/pse__Historical_UTE_Work_Cal_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>pse__Historical_UTE_Work_Cal_Start_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, historical utilization uses the start day based on the work calendar instead of the user's locale.</description>
    <inlineHelpText>When true, historical utilization uses the start day based on the work calendar instead of the user's locale.</inlineHelpText>
    <label>Historical UTE Work Cal Start Day</label>
    <type>Checkbox</type>
</CustomField>