unpackaged/main/default/objects/pse__Utilization__c/fields/pse__Resource_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Batch_Size__c</fullName>
    <defaultValue>20</defaultValue>
    <inlineHelpText>The number of resources to process in a single batch when calculating utilization</inlineHelpText>
    <label>Resource Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>