unpackaged/main/default/objects/pse__Utilization__c/fields/pse__Resource_Request_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Request_Batch_Size__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Resource Request Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>