unpackaged/main/default/objects/pse__Utilization__c/fields/pse__Target_Utilization_Approach__c.field-meta.xml
<CustomField>
    <fullName>pse__Target_Utilization_Approach__c</fullName>
    <defaultValue>"WEIGHTED"</defaultValue>
    <description>For a value of “LAST” only the Utilization Target at the end date of any Time Period is used for the Utilization Detail result for that period, multiplying it with the calendar hours.
For a value of “WEIGHTED” (default) between each Resource Change, the effective Target Utilization for each segment between Resource Change is multiplied with the calendar hours for that segment, and the resulting subtotals from each segment are summed (across both Historical and Scheduled periods) to arrive at Utilization Target Hours.</description>
    <label>Target Utilization Approach</label>
    <length>20</length>
    <type>Text</type>
</CustomField>