unpackaged/main/default/objects/pse__Utilization__c/fields/pse__Uncheck_Master_Based_On_Time_Parent__c.field-meta.xml
<CustomField>
    <fullName>pse__Uncheck_Master_Based_On_Time_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the "Is Report Master" flag is reset based on the Calculation Type and Parent object (checked) or based on the Utilization Calculation Name (unchecked).</description>
    <inlineHelpText>Determines whether the "Is Report Master" flag is reset based on the Calculation Type and Parent object (checked) or based on the Utilization Calculation Name (unchecked).</inlineHelpText>
    <label>Uncheck Master Based On Type/Parent</label>
    <type>Checkbox</type>
</CustomField>