unpackaged/main/default/objects/pse__Utilization__c/fields/pse__Utilization_Engine_Max_Range_TOD__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization_Engine_Max_Range_TOD__c</fullName>
    <description>Specifies the number of days into the future to maintain real time utilization data for Shift Management. The default value is 30.</description>
    <inlineHelpText>Specifies the number of days into the future to maintain real time utilization data for Shift Management. The default value is 30.</inlineHelpText>
    <label>Utilization Eng Max Range Shift Mgmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>