unpackaged/main/default/objects/pse__Utilization__c/fields/pse__Utilization_Engine_Start_Range_TOD__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization_Engine_Start_Range_TOD__c</fullName>
    <description>Specifies the number of days prior to the current date to calculate real time utilization data for Shift Management.  The default value is 5.</description>
    <inlineHelpText>Specifies the number of days prior to the current date to calculate real time utilization data for Shift Management.  The default value is 5.</inlineHelpText>
    <label>Utilization Eng Start Range Shift Mgmt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>